--- a/topseller.css
+++ b/topseller.css
@@ -8,7 +8,7 @@
    padding-bottom:30px;
 }
 .topSeller>h1{
-    font-family: 'Montserrat', sans-serif;;
+    font-family: 'Montserrat', sans-serif;
 }
 #smart{
     color:#FF0000;
@@ -208,4 +208,7 @@
     margin-left:20px;
    padding:4px 8px;
 
+}
+.Gaming{
+    padding-bottom: 65px;
 }
