--- a/topseller.css
+++ b/topseller.css
@@ -123,6 +123,9 @@
     font-family: 'Montserrat', sans-serif;
     text-align: center;
 }
+#newLaunchesSlides{
+    width:100%;
+}
 .slide1{
     width:85%;
     margin:auto;
@@ -131,7 +134,7 @@
 }
 .slide1>.slide1Img{
     width:46%;
-    height:100%;
+    height:auto;
 }
 .slide1>.slide1Img>img{
     width:100%;
@@ -142,6 +145,7 @@
     background-color: aliceblue;
     border-radius:0px 20px 20px 0px;
     margin-bottom:5.5px;
+    height:auto;
 }
 .slide1Img2>div:first-child{
     height:45%;
@@ -185,30 +189,15 @@
     font-size:25px;
 
 }
-.desFea{
-    display:flex;
+.desfea{
     text-align: center;
     margin:auto;
     width:70%;
     justify-content: center;
+    color:rgba(0, 0, 0, 0.673);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-.fea+div+div,.fea+div{
-    display:none;
-    color:rgb(81, 77, 77);
-    font-size:16.5px;
-    line-height:25px;
-    font-weight:400;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    text-align:justify;
-}
-.des,.fea{
-    background-color:rgb(152, 149, 149);
-    border:none;
-    color:white;
-    margin-left:20px;
-   padding:4px 8px;
 
-}
 .Gaming{
     padding-bottom: 65px;
 }
