--- a/navbar.css
+++ b/navbar.css
@@ -113,7 +113,7 @@ body {
 #userMenu {
     display: none;
     z-index: 100;
-    height: 100;
+    min-height: 100px;
     width: 210px;
     position: absolute;
     top: 75px;
